Archive2/c7/e0832a1bac9884/output
main.cpp: In function 'int main()':
main.cpp:15:15: error: 'vec' was not declared in this scope
     print_vec(vec);
               ^
